[package]
name = "graphus-tck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "openCypher TCK harness for Graphus."

[dependencies]
graphus-core = { path = "../graphus-core" }
